# PaperEater

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: tauri-build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
